# Copyright 2017 Google LLC. All Rights Reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_python//python:defs.bzl", "py_binary", "py_library", "py_test")
load(":build_defs.bzl", "compile_grm", "script_test")

package(default_visibility = ["//visibility:public"])

sh_test(
    name = "display_graphemes_are_uniquely_decodable",
    timeout = "short",
    srcs = ["//utils:eval.sh"],
    args = [
        """
        grep '^[^#]' $(location indic_graphemes.tsv) |
        cut -f 1 |
        $(location //utils:uniquely_decodable)
        """,
    ],
    data = [
        "indic_graphemes.tsv",
        "//utils:uniquely_decodable",
    ],
)

py_library(
    name = "script_util",
    srcs = ["script_util.py"],
    data = ["indic_graphemes.tsv"],
    deps = ["//utils:utf8"],
)

py_binary(
    name = "make_script_syms",
    srcs = ["make_script_syms.py"],
    deps = [
        ":script_util",
        "//external:absl/app",
        "//external:absl/flags",
    ],
)

py_binary(
    name = "make_grapheme_syms",
    srcs = ["make_grapheme_syms.py"],
    deps = [":script_util"],
)

py_binary(
    name = "make_grm_fragment",
    srcs = ["make_grm_fragment.py"],
    deps = [
        ":script_util",
        "//utils:utf8",
    ],
)

genrule(
    name = "gen_script_syms",
    outs = [
        "Beng.syms",
        "Deva.syms",
        "Sinh.syms",
        "Taml.syms",
        "Telu.syms",
    ],
    cmd = "$(location :make_script_syms) --genrule $(OUTS)",
    tools = [":make_script_syms"],
)

genrule(
    name = "gen_grapheme_syms",
    outs = [
        "display_grapheme.syms",
        "grapheme.syms",
    ],
    cmd = "$(location :make_grapheme_syms) $(OUTS)",
    tools = [":make_grapheme_syms"],
)

compile_grm(
    src = "Beng.grm",
    data = [
        "Beng.syms",
        "extra.syms",
        "grapheme.syms",
    ],
)

script_test(script = "Beng")

compile_grm(
    src = "Deva.grm",
    data = [
        "Deva.syms",
        "grapheme.syms",
    ],
)

script_test(script = "Deva")

compile_grm(
    src = "Sinh.grm",
    data = [
        "Sinh.syms",
        "grapheme.syms",
    ],
)

script_test(script = "Sinh")

py_test(
    name = "Malayalam_InterIndic_test",
    srcs = ["Malayalam_InterIndic_test.py"],
    data = [
        "//third_party/cldr:Malayalam-Bengali.xml",
        "//third_party/cldr:Malayalam-InterIndic.xml",
        "//third_party/cldr:Malayalam-Latin.xml",
        "//third_party/cldr:Malayalam-Tamil.xml",
    ],
    tags = ["manual"],  # requires patched PyICU
)
