# Copyright 2017 Google LLC. All Rights Reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

sh_test(
    name = "latn_deva_translit_test",
    timeout = "short",
    srcs = ["//utils:eval.sh"],
    args = [
        """
        grep '^[^#]' $(location translit_testdata.tsv) |
        cut -f 1,2 |
        $(location //utils:test_icu_transform) \
          $(location pi_Latn-pi_Deva.txt)
        """,
    ],
    data = [
        "pi_Latn-pi_Deva.txt",
        "translit_testdata.tsv",
        "//utils:test_icu_transform",
    ],
)

sh_test(
    name = "deva_thai_translit_test",
    timeout = "short",
    srcs = ["//utils:eval.sh"],
    args = [
        """
        grep '^[^#]' $(location translit_testdata.tsv) |
        cut -f 2,3 |
        $(location //utils:test_icu_transform) \
          $(location pi_Deva-pi_Thai.txt)
        """,
    ],
    data = [
        "pi_Deva-pi_Thai.txt",
        "translit_testdata.tsv",
        "//utils:test_icu_transform",
    ],
)

sh_test(
    name = "thai_laoo_translit_test",
    timeout = "short",
    srcs = ["//utils:eval.sh"],
    args = [
        """
        grep '^[^#]' $(location translit_testdata.tsv) |
        cut -f 3,4 |
        awk 'NF==2' |
        $(location //utils:test_icu_transform) \
          $(location pi_Thai-pi_Laoo.txt)
        """,
    ],
    data = [
        "pi_Thai-pi_Laoo.txt",
        "translit_testdata.tsv",
        "//utils:test_icu_transform",
    ],
)
