# Copyright 2016, 2017, 2018 Google LLC. All Rights Reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

package(default_visibility = ["//visibility:public"])

licenses(["notice"])  # Apache 2.0

exports_files(["eval.sh"])

py_binary(
    name = "python_version",
    srcs = ["python_version.py"],
    srcs_version = "PY2AND3",
)

py_test(
    name = "python_version_test",
    timeout = "short",
    main = "python_version.py",
    srcs = ["python_version.py"],
    srcs_version = "PY2AND3",
)

sh_test(
    name = "python_version_sh_test",
    timeout = "short",
    srcs = ["eval.sh"],
    args = ["python $(location //utils:python_version.py)"],
    data = ["python_version.py"],
)

py_binary(
    name = "uniquely_decodable",
    srcs = ["uniquely_decodable.py"],
    srcs_version = "PY2AND3",
    deps = ["//utils:utf8"],
)

py_binary(
    name = "sample",
    srcs = ["sample.py"],
    srcs_version = "PY2AND3",
    deps = ["//utils:utf8"],
)

py_binary(
    name = "freq",
    srcs = ["freq.py"],
    srcs_version = "PY2AND3",
    deps = ["//utils:utf8"],
)

py_library(
    name = "utf8",
    srcs = ["utf8.py"],
    srcs_version = "PY2AND3",
)

# Ordinarily, one would simply use a py_test build target, but here we want to
# test consistent behavior of utf8.py for both PY2 and PY3 and under different
# environment conditions, hence a non-standard sh_test.
sh_test(
    name = "utf8_test",
    timeout = "short",
    srcs = ["utf8_test.sh"],
    args = [
        "$(location utf8_test.py)",
        "$(location utf8_test_stdout.txt)",
    ],
    data = [
        "utf8.py",
        "utf8_test.py",
        "utf8_test_stdout.txt",
    ],
)
