# Copyright 2018 Google LLC
# 
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
# 
#     https://www.apache.org/licenses/LICENSE-2.0
# 
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License
#
# Author: pasindu@google.com (Pasindu De Silva)

package(default_visibility = ["//visibility:public"])

load("//festival_utils:festvox.bzl", "festvox")

"""
Usage
    Test phonology
        bazel test //bn/festvox:phonology_test

    Generate festvox lexicon (lexicon.scm)
        bazel build //bn/festvox:make_lexicon_scm

    Generate festvox prompts file (aka txt.done.data)
        bazel build //bn/festvox:make_festvox_prompts
"""

festvox(language = "bn")
