sh_binary(
    name = "sparrowhawk",
    srcs = ["sparrowhawk.sh"],
    data = [
        "sparrowhawk_configuration.ascii_proto",
        "tokenizer.ascii_proto",
        "verbalizer.ascii_proto",
        "bn_verbalize_spec.txt",
        "//bn/textnorm/classifier:tokenize_and_classify_thrax_compile_grm",
        "//bn/textnorm/verbalizer:verbalize_thrax_compile_grm",
        "//utils:sh_utter",
    ],
)
