sh_binary(
    name = "sparrowhawk",
    srcs = ["sparrowhawk.sh"],
    data = [
        "bn_verbalize_spec.txt",
        "sparrowhawk_configuration.ascii_proto",
        "tokenizer.ascii_proto",
        "verbalizer.ascii_proto",
        "//bn/textnorm/classifier:tokenize_and_classify_thrax_compile_grm",
        "//bn/textnorm/verbalizer:verbalize_bd_thrax_compile_grm",
        "//utils:sh_utter",
    ],
)
