sh_binary(
    name = "sparrowhawk",
    srcs = ["sparrowhawk.sh"],
    data = [
        "jv_verbalize_spec.txt",
        "sparrowhawk_configuration.ascii_proto",
        "tokenizer.ascii_proto",
        "verbalizer.ascii_proto",
        "//jv/textnorm/classifier:tokenize_and_classify_thrax_compile_grm",
        "//jv/textnorm/verbalizer:verbalize_thrax_compile_grm",
        "//utils:sh_utter",
    ],
)
