sh_binary(
    name = "sparrowhawk",
    srcs = ["sparrowhawk.sh"],
    data = [
        "sparrowhawk_configuration.ascii_proto",
        "tokenizer.ascii_proto",
        "verbalizer.ascii_proto",
        "ne_verbalize_spec.txt",
        "//ne/textnorm/classifier:tokenize_and_classify_thrax_compile_grm",
        "//ne/textnorm/verbalizer:verbalize_thrax_compile_grm",
        "//utils:sh_utter",
    ],
)
