# si/festvox/BUILD
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# Copyright 2016 Google, Inc.
# Author: pasindu@google.com (Pasindu De Silva)

load("//festival_utils:festvox.bzl", "festvox")

package(default_visibility = ["//visibility:public"])

"""
Usage
    Test phonology
        bazel test //si/festvox:phonology_test

    Generate festvox lexicon (lexicon.scm)
        bazel build //si/festvox:make_lexicon_scm

    Generate festvox prompts file (aka txt.done.data)
        bazel build //si/festvox:make_festvox_prompts
"""

festvox(
    language = "si",
    phonology = "ipa_phonology.json",
)
