sh_binary(
    name = "si_sparrowhawk",
    srcs = ["si_sparrowhawk.sh"],
    data = [
        "sparrowhawk_configuration_serialization.ascii_proto",
        "tokenizer.ascii_proto",
        "verbalizer.ascii_proto",
        "verbalizer_serialization_spec.ascii_proto",
        "//si/textnorm/classifier:tokenize_and_classify_thrax_compile_grm",
        "//si/textnorm/verbalizer:verbalize_thrax_compile_grm",
        "//utils:sh_utter",
    ],
)
