sh_binary(
    name = "sparrowhawk",
    srcs = ["sparrowhawk.sh"],
    data = [
        "sparrowhawk_configuration.ascii_proto",
        "su_verbalize_spec.txt",
        "tokenizer.ascii_proto",
        "verbalizer.ascii_proto",
        "//su/textnorm/classifier:tokenize_and_classify_thrax_compile_grm",
        "//su/textnorm/verbalizer:verbalize_thrax_compile_grm",
        "//utils:sh_utter",
    ],
)
