# Copyright 2018 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

package(default_visibility = ["//visibility:public"])

load("//:thrax.bzl", "thrax_compile_grm")
load("//:thrax.bzl", "grm_regression_test")

exports_files([
    "word_abbreviations.tsv",
    "bangla.grm",
])

base_path = "bn/textnorm/classifier/"

[
    grm_regression_test(
        name = test_rules + "_tests",
        far_file = test_rules + ".far",
        far_file_path = base_path,
        test_file = "testdata/" + test_rules + ".tsv",
        test_file_path = base_path,
    )
    for test_rules in [
        "abbreviation",
        "connector",
        "date",
        "lseq",
        "roman_numeral",
        "tokenize_and_classify",
    ]
]

thrax_compile_grm(
    name = "universal_rules",
    deps = ["universal_depot.far"],
)

thrax_compile_grm(
    name = "universal_func",
    deps = [
        "universal_rules.far",
        "universal_rules.grm",
    ],
)

universal_deps = [
    "universal_func.far",
    "universal_func.grm",
    "universal_rules.far",
    "universal_rules.grm",
]

[
    thrax_compile_grm(
        name = rule_name,
        deps = universal_deps,
    )
    for rule_name in [
        "bangla",
        "measure",
        "money",
        "ordinal",
        "roman_numeral",
        "util",
    ]
]

thrax_compile_grm(
    name = "abbreviation",
    deps = [
        "word_abbreviations.tsv",
    ] + universal_deps,
)

thrax_compile_grm(
    name = "date",
    deps = [
        "bangla.grm",
        "bangla.far",
    ] + universal_deps,
)

thrax_compile_grm(
    name = "lseq",
    deps = [
        "bangla.grm",
        "bangla.far",
    ] + universal_deps,
)

thrax_compile_grm(
    name = "telephone",
    deps = [
        "bangla.grm",
        "bangla.far",
    ] + universal_deps,
)

thrax_compile_grm(
    name = "connector",
    deps = [
        "bangla.far",
        "bangla.grm",
        "date.far",
        "date.grm",
        "measure.far",
        "measure.grm",
        "telephone.far",
        "telephone.grm",
    ] + universal_deps,
)

thrax_compile_grm(
    name = "classify",
    deps = [
        "abbreviation.far",
        "abbreviation.grm",
        "bangla.far",
        "bangla.grm",
        "date.far",
        "date.grm",
        "lseq.far",
        "lseq.grm",
        "measure.far",
        "measure.grm",
        "money.far",
        "money.grm",
        "ordinal.far",
        "ordinal.grm",
        "telephone.far",
        "telephone.grm",
    ] + universal_deps,
)

thrax_compile_grm(
    name = "tokenize_and_classify",
    deps = [
        "abbreviation.far",
        "abbreviation.grm",
        "bangla.far",
        "bangla.grm",
        "classify.far",
        "classify.grm",
        "date.far",
        "date.grm",
        "lseq.far",
        "lseq.grm",
        "measure.far",
        "measure.grm",
        "money.far",
        "money.grm",
        "ordinal.far",
        "ordinal.grm",
        "telephone.far",
        "telephone.grm",
        "util.far",
        "util.grm",
    ] + universal_deps,
)

# compile_portable_grm(
#     name = "tokenize_and_classify",
#     lookahead = "ilabel",
#     deps = [
#         ":bangla",
#         ":classify",
#         ":util",
#         "//speech/tts/open_source/languages/textnorm/grammars/classify/universal:universal_func",
#         "//speech/tts/open_source/languages/textnorm/grammars/classify/universal:universal_rules",
#     ],
# )
