# Copyright 2018 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

package(default_visibility = ["//visibility:public"])

load("//:thrax.bzl", "thrax_compile_grm")
load("//:thrax.bzl", "grm_regression_test")

base_path = "bn/textnorm/verbalizer/"

[
    grm_regression_test(
        name = test_rules + "_tests",
        far_file = test_rules + ".far",
        far_file_path = base_path,
        test_file = "testdata/" + test_rules + ".tsv",
        test_file_path = base_path,
    )
    for test_rules in [
        "abbreviation",
        "cardinal",
        "connector",
        "date",
        "decimal",
        "digit",
        "electronic",
        "fraction",
        "lseq",
        "measure",
        "money",
        "telephone",
        "time",
        "verbatim",
    ]
]

thrax_compile_grm(
    name = "universal_rules",
    deps = ["universal_depot.far"],
)

thrax_compile_grm(
    name = "mini_lseq_rules",
)

thrax_compile_grm(
    name = "universal_func",
    deps = [
        "universal_rules.far",
        "universal_rules.grm",
    ],
)

universal_deps = [
    "universal_func.far",
    "universal_func.grm",
    "universal_rules.far",
    "universal_rules.grm",
]

thrax_compile_grm(
    name = "number_names_rules",
    deps = [
        "number_names_depot.far",
    ],
)

[
    thrax_compile_grm(
        name = rule_name,
        deps = universal_deps,
    )
    for rule_name in [
        "connector",
        "digit",
        "lseq",
    ]
]

thrax_compile_grm(
    name = "date",
    deps = [
        "number_names_rules.grm",
        "number_names_rules.far",
        "number_names_depot.far",
    ] + universal_deps,
)

thrax_compile_grm(
    name = "abbreviation",
    deps = [
        "//bn/textnorm/classifier:word_abbreviations.tsv",
    ] + universal_deps,
)

thrax_compile_grm(
    name = "telephone",
    deps = [
        "digit.grm",
        "digit.far",
    ] + universal_deps,
)

thrax_compile_grm(
    name = "ordinal",
    deps = [
        "number_names_rules.grm",
        "number_names_rules.far",
        "number_names_depot.far",
    ] + universal_deps,
)

thrax_compile_grm(
    name = "cardinal",
    deps = [
        "digit.grm",
        "digit.far",
        "number_names_rules.grm",
        "number_names_rules.far",
        "number_names_depot.far",
    ] + universal_deps,
)

thrax_compile_grm(
    name = "decimal",
    deps = [
        "cardinal.grm",
        "cardinal.far",
        "digit.grm",
        "digit.far",
        "number_names_rules.grm",
        "number_names_rules.far",
        "number_names_depot.far",
    ] + universal_deps,
)

thrax_compile_grm(
    name = "verbatim",
    deps = [
        "emoji_annotations.tsv",
        "verbatim.tsv",
        "digit.grm",
        "digit.far",
        "number_names_rules.grm",
        "number_names_rules.far",
        "number_names_depot.far",
    ] + universal_deps,
)

thrax_compile_grm(
    name = "electronic",
    deps = [
        "emoji_annotations.tsv",
        "verbatim.tsv",
        "verbatim.grm",
        "verbatim.far",
        "date.grm",
        "date.far",
        "digit.grm",
        "digit.far",
        "mini_lseq_rules.grm",
        "mini_lseq_rules.far",
        "number_names_rules.grm",
        "number_names_rules.far",
        "number_names_depot.far",
    ] + universal_deps,
)

thrax_compile_grm(
    name = "time",
    deps = [
        "time_zones.txt",
        "number_names_rules.grm",
        "number_names_rules.far",
        "number_names_depot.far",
    ] + universal_deps,
)

thrax_compile_grm(
    name = "money",
    deps = [
        "money_country_major.txt",
        "money_country_minor.txt",
        "money_major.txt",
        "money_minor.txt",
        "digit.grm",
        "digit.far",
        "cardinal.grm",
        "cardinal.far",
        "number_names_rules.grm",
        "number_names_rules.far",
        "number_names_depot.far",
    ] + universal_deps,
)

thrax_compile_grm(
    name = "fraction",
    deps = [
        "digit.grm",
        "digit.far",
        "cardinal.grm",
        "cardinal.far",
        "number_names_rules.grm",
        "number_names_rules.far",
        "number_names_depot.far",
        "//bn/textnorm/classifier:bangla.grm",
        "//bn/textnorm/classifier:bangla.far",
    ] + universal_deps,
)

thrax_compile_grm(
    name = "measure",
    deps = [
        "cardinal.far",
        "cardinal.grm",
        "decimal.far",
        "decimal.grm",
        "digit.far",
        "digit.grm",
        "fraction.far",
        "fraction.grm",
        "number_names_depot.far",
        "number_names_rules.far",
        "number_names_rules.grm",
        "//bn/textnorm/classifier:bangla.far",
        "//bn/textnorm/classifier:bangla.grm",
    ] + universal_deps,
)

thrax_compile_grm(
    name = "verbalize",
    deps = [
        "abbreviation.far",
        "abbreviation.grm",
        "cardinal.far",
        "cardinal.grm",
        "connector.far",
        "connector.grm",
        "date.far",
        "date.grm",
        "decimal.far",
        "decimal.grm",
        "digit.far",
        "digit.grm",
        "electronic.far",
        "electronic.grm",
        "fraction.far",
        "fraction.grm",
        "lseq.far",
        "lseq.grm",
        "measure.far",
        "measure.grm",
        "mini_lseq_rules.far",
        "mini_lseq_rules.grm",
        "money.far",
        "money.grm",
        "number_names_depot.far",
        "number_names_rules.far",
        "number_names_rules.grm",
        "ordinal.far",
        "ordinal.grm",
        "telephone.far",
        "telephone.grm",
        "time.far",
        "time.grm",
        "verbatim.far",
        "verbatim.grm",
        "//bn/textnorm/classifier:bangla.far",
        "//bn/textnorm/classifier:bangla.grm",
    ] + universal_deps,
)

thrax_compile_grm(
    name = "verbalize_bd",
    deps = [
        "abbreviation.far",
        "abbreviation.grm",
        "cardinal.far",
        "cardinal.grm",
        "connector.far",
        "connector.grm",
        "date.far",
        "date.grm",
        "decimal.far",
        "decimal.grm",
        "digit.far",
        "digit.grm",
        "electronic.far",
        "electronic.grm",
        "fraction.far",
        "fraction.grm",
        "lseq.far",
        "lseq.grm",
        "measure.far",
        "measure.grm",
        "mini_lseq_rules.far",
        "mini_lseq_rules.grm",
        "money.far",
        "money.grm",
        "number_names_depot.far",
        "number_names_rules.far",
        "number_names_rules.grm",
        "ordinal.far",
        "ordinal.grm",
        "telephone.far",
        "telephone.grm",
        "time.far",
        "time.grm",
        "verbatim.far",
        "verbatim.grm",
        "verbalize.far",
        "verbalize.grm",
        "//bn/textnorm/classifier:bangla.far",
        "//bn/textnorm/classifier:bangla.grm",
    ] + universal_deps,
)

thrax_compile_grm(
    name = "verbalize_in",
    deps = [
        "abbreviation.far",
        "abbreviation.grm",
        "cardinal.far",
        "cardinal.grm",
        "connector.far",
        "connector.grm",
        "date.far",
        "date.grm",
        "decimal.far",
        "decimal.grm",
        "digit.far",
        "digit.grm",
        "electronic.far",
        "electronic.grm",
        "fraction.far",
        "fraction.grm",
        "lseq.far",
        "lseq.grm",
        "measure.far",
        "measure.grm",
        "mini_lseq_rules.far",
        "mini_lseq_rules.grm",
        "money.far",
        "money.grm",
        "number_names_depot.far",
        "number_names_rules.far",
        "number_names_rules.grm",
        "ordinal.far",
        "ordinal.grm",
        "telephone.far",
        "telephone.grm",
        "time.far",
        "time.grm",
        "verbatim.far",
        "verbatim.grm",
        "verbalize.far",
        "verbalize.grm",
        "//bn/textnorm/classifier:bangla.far",
        "//bn/textnorm/classifier:bangla.grm",
    ] + universal_deps,
)
