# Copyright 2018 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("//:thrax.bzl", "grm_regression_test", "thrax_compile_grm")

package(default_visibility = ["//visibility:public"])

base_path = "km/textnorm/classifier/"

exports_files([
    "classifier_repeater.grm",
    "khmer.grm",
])

[
    grm_regression_test(
        name = test_rules + "_tests",
        far_file = test_rules + ".far",
        far_file_path = base_path,
        test_file = "testdata/" + test_rules + ".tsv",
        test_file_path = base_path,
    )
    for test_rules in [
        "address",
        "connector",
        "date",
        "lseq",
        "measure",
        "money",
        "classifier_repeater",
        "telephone",
        "time",
        "tokenize_and_classify",
        "verbatim",
    ]
]

thrax_compile_grm(
    name = "universal_rules",
    deps = ["universal_depot.far"],
)

thrax_compile_grm(
    name = "universal_func",
    deps = [
        "universal_rules.far",
        "universal_rules.grm",
    ],
)

universal_deps = [
    "universal_func.far",
    "universal_func.grm",
    "universal_rules.far",
    "universal_rules.grm",
]

[
    thrax_compile_grm(
        name = rule_name,
        deps = universal_deps,
    )
    for rule_name in [
        "verbatim",
        "telephone",
        "money",
        "khmer",
        "roman_numeral",
        "time",
    ]
]

thrax_compile_grm(
    name = "address",
    deps = [
        "khmer.far",
        "khmer.grm",
    ] + universal_deps,
)

thrax_compile_grm(
    name = "date",
    deps = [
        "khmer.far",
        "khmer.grm",
    ] + universal_deps,
)

thrax_compile_grm(
    name = "classifier_repeater",
    deps = [
        "khmer.far",
        "khmer.grm",
    ] + universal_deps,
)

thrax_compile_grm(
    name = "lseq",
    deps = [
        "khmer.far",
        "khmer.grm",
        "lseq_whitelist.tsv",
    ] + universal_deps,
)

thrax_compile_grm(
    name = "measure",
    deps = [
        "khmer.far",
        "khmer.grm",
        "measure_units_km.txt",
        "measure_prefixes_km.txt",
        "measure_units_abbv.txt",
    ] + universal_deps,
)

thrax_compile_grm(
    name = "classify",
    deps = [
        "address.grm",
        "address.far",
        "connector.grm",
        "connector.far",
        "date.grm",
        "date.far",
        "khmer.grm",
        "khmer.far",
        "lseq.grm",
        "lseq.far",
        "measure.grm",
        "measure.far",
        "money.grm",
        "money.far",
        "classifier_repeater.grm",
        "classifier_repeater.far",
        "roman_numeral.grm",
        "roman_numeral.far",
        "telephone.grm",
        "telephone.far",
        "time.grm",
        "time.far",
        "verbatim.grm",
        "verbatim.far",
    ] + universal_deps,
)

thrax_compile_grm(
    name = "connector",
    deps = [
        "date.grm",
        "date.far",
        "measure.grm",
        "measure.far",
        "money.grm",
        "money.far",
        "time.grm",
        "time.far",
        "khmer.far",
        "khmer.grm",
    ] + universal_deps,
)

thrax_compile_grm(
    name = "tokenize_and_classify",
    deps = [
        "address.grm",
        "address.far",
        "connector.grm",
        "connector.far",
        "classify.grm",
        "classify.far",
        "date.grm",
        "date.far",
        "khmer.grm",
        "khmer.far",
        "lseq.grm",
        "lseq.far",
        "measure.grm",
        "measure.far",
        "money.grm",
        "money.far",
        "classifier_repeater.grm",
        "classifier_repeater.far",
        "roman_numeral.grm",
        "roman_numeral.far",
        "telephone.grm",
        "telephone.far",
        "time.grm",
        "time.far",
        "verbatim.grm",
        "verbatim.far",
    ] + universal_deps,
)
